# sg200x-bsp

./: AGENTS.md  CAMERA_GUIDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: gpio.rs  lib.rs  mp.rs  rstc.rs
src/camera/: gc4653.rs  mod.rs
src/cif/: README.md  drv.rs  examples.rs  frame.rs  lvds.rs  mipi.rs  mod.rs  phy.rs  regs.rs  ttl.rs  types.rs  vip_sys.rs
src/dma/: mod.rs  regs.rs
src/ethernet/: desc.rs  mdio.rs  mod.rs  nic.rs  regs.rs
src/i2c/: consts.rs  instances.rs  mod.rs
src/jpu/: decoder.rs  header.rs  mem.rs  mod.rs  regs.rs
src/mipirx/: README.md  csi.rs  mod.rs  phy.rs  regs.rs  types.rs
src/pinmux/: fmux.rs  ioblk.rs  mod.rs
src/pwm/: consts.rs  instances.rs  mod.rs
src/sdmmc/: consts.rs  mod.rs  utils.rs
src/soc/: mod.rs  sg2002.rs
src/tpu/: mod.rs  platform.rs  pmu.rs  reg_tdma.rs  reg_tiu.rs  types.rs
src/usb/: cache.rs  class_codes.rs  error.rs  log.rs  mod.rs  platform.rs  setup.rs
src/usb/class/: mass_storage.rs  mod.rs  uvc.rs
src/usb/class/hub/: device.rs  enumerate.rs  mod.rs  setup.rs
src/usb/class/uvc/: capture.rs  consts.rs  control.rs  mod.rs  parse.rs  setup.rs  stream.rs
src/usb/device/: controller.rs  desc.rs  ep0.rs  mod.rs
src/usb/device/class/: cdc_acm.rs  mod.rs
src/usb/host/: enumerate.rs  mod.rs  topology.rs
src/usb/host/dwc2/: bulk.rs  channel.rs  control.rs  controller.rs  dma.rs  ep0.rs  isoch.rs  isr.rs  mmio.rs  mod.rs  regs.rs
src/utils/: cache.rs  delay.rs  indent.rs  mod.rs
src/vi/: bt.rs  mod.rs  regs.rs  ttl.rs  types.rs
