[package]
name = "sg200x-bsp"
version = "0.3.0"
edition = "2024"
authors = ["yfblock"]
description = "Board Support Package (BSP) for SG2002/SG200x series chips, providing hardware abstraction layer drivers for pinmux, GPIO, SD/MMC, and TPU"
license = "MIT"
repository = "https://github.com/yfblock/sg200x-bsp"
homepage = "https://github.com/yfblock/sg200x-bsp"
documentation = "https://docs.rs/sg200x-bsp"
readme = "README.md"
keywords = ["embedded", "sg2002", "bsp", "no-std", "risc-v"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
tock-registers = "0.9"
bit-struct = "0.3.2"
log = "0.4"
